--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -644,7 +644,7 @@
           valid for read clients for as long as possible. When the construction of the new version 
           and its inventory is complete, it can then be copied to a temporary file name alongside 
           the top level inventory. Temporary inventory files always occur in OCFL Object Roots and
-          should be names "tmp_inventory.json".
+          should be named `tmp_inventory.json`.
           </li>
         </ul>
       </section>
