--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -513,7 +513,7 @@
                     <code>cf83e1357eefb8bdf1542850d66d8007d620e405...</code> (128 hex digits long).</td>
             </tr>
             <tr>
-                <td><code>blake2b</code></td>
+                <td><code>blake2b-512</code></td>
                 <td>Full-length form only, using the 2B variant (64 bit) as defined by [[!RFC7693]]. MUST be encoded
                     using hex (base16) encoding [[!RFC4648]]. For example, the <code>blake2b</code> digest of a
                     zero-length bitstream starts <code>786a02f742015903c6c6fd852552d272912f4740...</code> (128 hex
