--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -515,7 +515,7 @@
             <tr>
                 <td><code>blake2b-512</code></td>
                 <td>Full-length form only, using the 2B variant (64 bit) as defined by [[!RFC7693]]. MUST be encoded
-                    using hex (base16) encoding [[!RFC4648]]. For example, the <code>blake2b</code> digest of a
+                    using hex (base16) encoding [[!RFC4648]]. For example, the <code>blake2b-512</code> digest of a
                     zero-length bitstream starts <code>786a02f742015903c6c6fd852552d272912f4740...</code> (128 hex
                     digits long).</td>
             </tr>
