--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -385,18 +385,18 @@
         └── content
                └── ... content files ...
 </pre>
-            The <a>OCFL Object Root</a> MUST NOT contain files or directories other than those specified in the following sections.
+            The <a>OCFL Object Root</a> MUST NOT contain files or directories other than those specified in the
+            following sections.
     </section>
 
     <section id="object-conformance-declaration">
         <h2>Object Conformance Declaration</h2>
         <p>
             The version declaration MUST be formatted according to the [[!NAMASTE]] specification. It MUST be a
-            file in the base directory of the OCFL Object Root giving the OCFL version in the filename.
-            The filename MUST conform to the pattern <code>T=dvalue</code>, where <code>T</code> MUST be 0, and
-            <code>dvalue</code> MUST be <code>ocfl_object_</code>, followed by the OCFL specification version number.
-            The text contents of the file MUST be the same as <code>dvalue</code>, followed by a newline
-            (<code>\n</code>).
+            file in the base directory of the OCFL Object Root giving the OCFL version in the filename. The filename
+            MUST conform to the pattern <code>T=dvalue</code>, where <code>T</code> MUST be 0, and <code>dvalue</code>
+            MUST be <code>ocfl_object_</code>, followed by the OCFL specification version number. The text contents of
+            the file MUST be the same as <code>dvalue</code>, followed by a newline (<code>\n</code>).
         </p>
     </section>
 
