Expand on when it is OK to not have an inventory in a verison directory.

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -794,12 +794,14 @@ DIGEST inventory.json
             SHOULD include an inventory file that is an <a href="#inventory">Inventory</a> of all content for versions
             up to and including that particular version. Where an OCFL Object contains <code>inventory.json</code>
             in version directories, the inventory file in the OCFL Object Root MUST be the same as the file in the
-            most recent version. Every inventory file MUST have a corresponding <a href="#inventory-digest">Inventory
-            Digest</a>.
+            most recent version, and that inventory file MUST NOT be subsequently deleted. Every inventory file MUST
+            have a corresponding <a href="#inventory-digest">Inventory Digest</a>.
         </p>
         <blockquote class="informative">
             Non-normative note: Storing an inventory for every version provides redundancy for this critical
-            information in a way that is compatible with storage strategies that have immutable version directories.
+            information, and allows reconstruction of prior versions when the most recent versions are not available.
+            The option to not store the inventory file in prior version directories is to facilitate migration from
+            other object structures that have immutable version directories.
         </blockquote>
     </section>
 
