Fixed: Remove empty href

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -746,7 +746,7 @@
             <p>
                 The <code>fixity</code> block SHOULD contain keys corresponding to the controlled vocabulary given in
                 the <a href="#digest-algorithms">digest algorithms</a> listed in the Digests section. Additional keys
-                MAY be used if they are supplied in an <a href="">extension</a>. The value of each key MUST follow the
+                MAY be used if they are supplied in an <a>Extension</a>. The value of each key MUST follow the
                 structure of the <a href="#manifest"><code>manifest</code></a> block; that is, a key corresponding to
                 the digest value, and an array of <a>content path</a>s that match that digest.
             </p>
