--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -532,8 +532,8 @@
       </p>
       <p>
         The new object need not have the same identifier as the original object. In this case, the deleted object may be
-        replaced by a new object using the original identifier and location in the OCFL Storage Root. This object is
-        a standard OCFL object with content that redirects users and software to the new version - possibly with an
+        replaced by a placeholder object using the original identifier and location in the OCFL Storage Root. This object
+	is a standard OCFL object with content that redirects users and software to the new version - possibly with an
 	indication of why the new object was created, if appropriate. The OCFL does not define redirect mechanisms,
         the interpretation of object contents is purely a client application concern.
       </p>
