well-defined --> deterministic

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -913,7 +913,7 @@ DIGEST inventory.json
           hierarchies, the following restrictions apply:
         </p>
         <ol>
-          <li>There MUST be a well-defined mapping from an object identifier to a unique storage path</li>
+          <li>There MUST be a deterministic mapping from an object identifier to a unique storage path</li>
           <li>Storage hierarchies MUST NOT include files within intermediate directories</li>
           <li>Storage hierarchies MUST be terminated by OCFL Object Roots</li>
           <li>Storage hierarchies within the same OCFL Storage Root SHOULD use just one layout pattern</li>
