--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -398,7 +398,15 @@
                 └── ...
             </pre>
           </li>
-      </ul>
+        </ul>
+      <p>
+        Some identifier schemes may require transformation before such approaches can be used effectively. A simple
+        example would be sequentially assigned identifiers, which would not distribute objects within the filesystem
+        evenly. Hash functions may be used to provide a unidirectional mapping between URI/PID and filesystem path,
+        as required by the OCFL. Encryption algorithms may be used to provide a bi-directional mapping which may be
+        a useful aid to human readability. Relevant details should be referenced in <code>ocfl_layout.json</code>
+        in the Storage Root.
+      </p>      
     </section>
 
     <section>
@@ -419,8 +427,6 @@
         storage efficiency, do require care when considering issues of capacity planning or migration.
       </p>
     </section>
-
-
   </section>
 
   <section>
@@ -523,12 +529,11 @@
         object is created.
       </p>
       <p>
-        The new object need not have the same identifier as the original object. In this case, the deleted object can be
-        replaced by a "stub" object with the original identifier and location in the OCFL Storage Root. This object is
-        a standard OCFL object that just contains brief information that redirects users and software to the new
-        version - possibly with an indication of why the new object was created, if appropriate. The OCFL does not
-        define this stub object in any way - its structure, interpretation and handling are entirely client dependent,
-        but ideally some elements should be human readable for rebuildability.
+        The new object need not have the same identifier as the original object. In this case, the deleted object may be
+        replaced by a placeholder object using the original identifier and location in the OCFL Storage Root. This
+        is a standard OCFL object with content that redirects users and software to the new version - possibly with an
+        indication of why the new object was created, if appropriate. The OCFL does not define redirect mechanisms,
+        the interpretation of object contents is purely a client application concern.
       </p>
     </section>
 
@@ -644,7 +649,7 @@
           valid for read clients for as long as possible. When the construction of the new version 
           and its inventory is complete, it can then be copied to a temporary file name alongside 
           the top level inventory. Temporary inventory files always occur in OCFL Object Roots and
-          should be named `tmp_inventory.json`.
+          should be named `tmp_inventory.json`
           </li>
         </ul>
       </section>
