--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -451,7 +451,7 @@
             There MUST be no other files as children of a version directory, other than an <a
              href="#inventory">inventory file</a> and a <a href="#inventory-digest">inventory digest</a>.
             The version directory SHOULD NOT contain any directories other than the designated content
-            sub-directory.
+            sub-directory. Once created, the contents of a version directory are expected to be immutable.
         </p>
         <p>
             If the key <code>contentDirectory</code> is not present in the <a href="#inventory">inventory file</a> then
