--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -32,6 +32,7 @@
                 },
                 {
                     name: "Julian Morley",
+                    url: "https://orcid.org/0000-0003-4176-1933",
                     company: "Stanford University",
                     companyURL: "https://library.stanford.edu/"
                 },
