Add logo attribution (#390)
* Add logo attribution

Related to: https://github.com/OCFL/spec/issues/386

* code review

* code review

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -90,7 +90,10 @@
             }],
             overrideCopyright: '<p class="copyright">This document is licensed under a ' +
                 '<a class="subfoot" href="https://creativecommons.org/licenses/by/4.0/" rel="license">' +
-                'Creative Commons Attribution 4.0 License</a>.</p>',
+                'Creative Commons Attribution 4.0 License</a>.<br/>' +
+                '<a class="copyright" href="https://avatars0.githubusercontent.com/u/35607965">' +
+                'OCFL logo: hand-drive</a>" by <a href="http://orcid.org/0000-0001-8390-6171">Patrick Hochstenbach' +
+                '</a> is licensed under <a href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>.</p>',
             localBiblio: {
                 "BagIt": {
                     title: "The BagIt File Packaging Format (V1.0)",
