--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -635,16 +635,16 @@
 	</p>	
         <ul>
           <li>  
-          Workspace: Any OCFL Client should have a place to assemble Versions before they are transferred
+          Workspace: Any OCFL Client should have a place to assemble versions before they are transferred
           to the Storage Root to make the transfer operation easier to implement in a controllable
           and recoverable manner. Ideally it should be within the same filesystem/namespace to make file
           transfers as atomic as possible, comprising filesystem metadata changes rather than file copy 
-          operations. The Workspace is a directory that contains all such objects-in-fight in a similar
+          operations. The Workspace is a directory that contains all such objects-in-flight in a similar
           layout to an OCFL Storage Root. 
           </li>
           <li>
-          Object Workspace Directory: in this example, for simplicity, each OCFL Object being created or 
-          updated has a path in the Workspace that is the same as its eventual strage path in the OCFL 
+          Object Workspace Directory: In this example, for simplicity, each OCFL Object being created or 
+          updated has a path in the Workspace that is the same as its eventual storage path in the OCFL 
           Storage Root. This means that it is easy for clients to determine if an object is being updated
           and also provides a mechanism to implement objects with mutable current versions without 
           violating OCFL assumptions. When updating an OCFL Object, it is useful to make a copy of the
@@ -652,14 +652,14 @@
           at the start of the update operation.
           </li>
           <li>
-          Version Assembly Directories: Ideally, one version assembly directory should exist per OCFL 
+          Version Assembly Directory: In this case, one version assembly directory should exist per OCFL 
           Object at any time and updates to it should be managed by a single controlling process to avoid
           conflicts. If updates to multiple objects, or from multiple sources, need to be supported, then
           it should be implemented upstream of version assembly in order to allow additional locking and
           conflict resolution. It is useful to have a unique transaction identifier for each object being 
           updated to simplify any overlying process control logic (For example, it could be used as an 
           eTag for a REST API implementation). This transaction identifier can be used to generate a name
-          for the version assembly directory, which sits within the object workspace directory.
+          for the version assembly directory, which sits within the object workspace directory. 
           </li>
           <li>
           Temporary Inventory Files: A top level object inventory file should never be updated in situ.
@@ -693,11 +693,11 @@
             start a new transaction without rereading the updated object.
             </li>
             <li>
-            Create a version assembly directory and save the transaction ID (in this case, using is as
+            Create a version assembly directory and save the transaction ID (in this case, using it as
             the version assembly directory name.
             </li>
             <li>
-            Copy inventory from object into version assemby directory as a starting point for the new version
+            Copy inventory from object into version assembly directory as a starting point for the new version
             </li>
           </ol>      
         </section>
@@ -777,7 +777,7 @@
             </li>    
           </ol>
         </section>
-	      
+     
       </section>
     </section>
   </section>
