--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -693,7 +693,7 @@
             start a new transaction without rereading the updated object.
             </li>
             <li>
-            Create a version assembly directory and save the transaction ID (in this case, using it as
+            Create a version assembly directory and save the transaction ID - in this case, using it as
             the version assembly directory name.
             </li>
             <li>
